# renksu-reader

./: Cargo.toml  README.md  flash.sh
.cargo/: config
res/: comm-error.img
src/: button.rs  comm.rs  main.rs  player.rs  sh1106_data_mode.rs  shared_spi.rs
